<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="hello_android">Hello Android from res</string>
    <string name="new_text">this text is new</string>
    <string name="btn_one">First button</string>
    <string name="btn_two">Second button</string>
    <string name="btn_three">Third button</string>

    <string name="item_add">Add</string>
    <string name="item_edit">Edit</string>
    <string name="item_del">Delete</string>
    <string name="item_settings">Settings</string>

    <string name="item_context1">Context item 1</string>
    <string name="item_context2">Context item 2</string>

</resources>
