<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item_add_id"
        android:title="@string/item_add"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom|withText"
        />
    <item android:id="@+id/item_edit_id"
        android:title="@string/item_edit"
        android:icon="@android:drawable/ic_input_get"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/item_delete_id"
        android:title="@string/item_del"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/item_settings_id"
        android:title="@string/item_settings"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="never"/>



</menu>